Dark mode fix

--- a/frontend/canvas_dashboard/src/css/card-grid.css
+++ b/frontend/canvas_dashboard/src/css/card-grid.css
@@ -6,13 +6,22 @@
 }
 
 .grid-container a {
-  color:black
+  color: white;
 }
 
 .card {
-  border: 1px solid #000000;
+  border: 1px solid #ffffff;
   border-radius: 8px;
   padding: 12px;
+}
+
+@media (prefers-color-scheme: light) {
+  .grid-container a {
+    color: black;
+  }
+  .card {
+    border: 1px solid #000000;
+  }
 }
 
 .separator-line {
